--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -23,6 +23,23 @@
     <fragment android:id="@+id/nav_seven_days"
         android:name="ru.awawa.weatherapp.ui.main.daily.SevenDaysWeatherFragment"
         android:label="@string/sevenDaysWeather"
-        tools:layout="@layout/fragment_seven_days_layout"/>
+        tools:layout="@layout/fragment_seven_days_layout">
+        <action android:id="@+id/action_details"
+            app:destination="@id/nav_details"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim"/>
+    </fragment>
+
+    <fragment android:id="@+id/nav_details"
+        android:name="ru.awawa.weatherapp.ui.main.daily.details.DetailsFragment"
+        android:label="@string/details"
+        tools:layout="@layout/fragment_details_layout">
+        <argument android:name="position"
+            app:argType="integer"
+            android:defaultValue="0"
+            app:nullable="false"/>
+    </fragment>
 
 </navigation>
